升级11后的调整，以及一些格式化